changed TG channel

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7404296997:AAEp9Pudu0DeuLMrYNPiDWRrhBe1zLhgXBs
 CHANNEL_ID=@footballacademy11      # або numeric: -1001234567890
-CHANNEL_LINK=https://t.me/footballacademy11
+CHANNEL_LINK=https://t.me/+AZOCkZe93g4zZjJi
